--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -59,7 +59,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: "Raleway","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
+$body-font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -546,4 +546,3 @@ $topbar-padding: 0.5rem;
 $topbar-background: $white;
 $topbar-title-spacing: 1rem;
 $topbar-input-width: 200px;
-
