--- a/css/app.css
+++ b/css/app.css
@@ -4075,3 +4075,21 @@ h1, h2, h3, h4, h5, h6 {
 
 .off-canvas-content, .off-canvas-content {
   box-shadow: none; }
+
+.latest-project .project-thumb {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  overflow: hidden;
+  background-color: #2199e8; }
+  .latest-project .project-thumb img {
+    min-height: 100%;
+    min-width: 100%;
+    width: auto;
+    height: 100%;
+    position: relative;
+    max-width: none;
+    left: -50%; }
