--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,16 @@
+// Mixins
+
+@mixin project-thumb {
+	width: 100vw;
+	position: relative;
+	left: 50%;
+	right: 50%;
+	margin-left: -50vw;
+	margin-right: -50vw;
+}
+
+// Typography
+
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 200;
 	@media #{$medium-up} {
@@ -26,6 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // HEADER
+
 .top-bar-center {
 	display: none; // this is a tablet and wider menu
 }
@@ -57,6 +71,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // BODY
+
 .off-canvas-content, .off-canvas-content {
     box-shadow: none;
+}
+
+// HOME
+
+.latest-project {
+	.project-thumb {
+		@include project-thumb();
+		overflow: hidden;
+
+		//TODO: remove me
+		background-color: $primary-color;
+
+		img {
+			min-height: 100%;
+			min-width: 100%;
+			width: auto;
+			height: 100%;
+			position: relative;
+			max-width: none;
+			left: -50%;
+		}
+	}
 }
