--- a/css/app.css
+++ b/css/app.css
@@ -4083,13 +4083,8 @@ h1, h2, h3, h4, h5, h6 {
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
+  height: 270px;
   overflow: hidden;
+  background-position: center;
+  background-size: cover;
   background-color: #2199e8; }
-  .latest-project .project-thumb img {
-    min-height: 100%;
-    min-width: 100%;
-    width: auto;
-    height: 100%;
-    position: relative;
-    max-width: none;
-    left: -50%; }
