--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -7,6 +7,12 @@
 	right: 50%;
 	margin-left: -50vw;
 	margin-right: -50vw;
+
+	height: 270px;
+	overflow: hidden;
+	background-position: center;
+	background-size: cover;
+	background-color: $primary-color;
 }
 
 // Typography
@@ -81,19 +87,5 @@ h1, h2, h3, h4, h5, h6 {
 .latest-project {
 	.project-thumb {
 		@include project-thumb();
-		overflow: hidden;
-
-		//TODO: remove me
-		background-color: $primary-color;
-
-		img {
-			min-height: 100%;
-			min-width: 100%;
-			width: auto;
-			height: 100%;
-			position: relative;
-			max-width: none;
-			left: -50%;
-		}
 	}
 }
