--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,28 +50,26 @@
         </div>
 
         <!-- off-canvas title bar for 'small' screen -->
-        <div class="contain-to-grid sticky">
+        <div class="sticky">
           <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
             <div class="title-bar-center">
               <span class="title-bar-title"><img src="img/logo_d.png" alt="Damgar Group Symbol"></a></span>
-            </div>
-            <div class="title-bar-right">
-              <button class="menu-icon" type="button" data-open="offCanvasRight">menu</button>
+              <button class="menu-icon float-right" type="button" data-open="offCanvasRight">menu</button>
             </div>
           </div>
-
-          <!-- off-canvas right menu -->
-          <nav class="off-canvas position-right" id="offCanvasRight" data-off-canvas data-position="right" role="navigation">
-            <ul class="vertical dropdown menu" data-dropdown-menu>
-              {% include nav.html %}
-            </ul>
-          </nav>
         </div>
+
+        <!-- off-canvas right menu -->
+        <nav class="off-canvas position-right" id="offCanvasRight" data-off-canvas data-position="right" role="navigation">
+          <ul class="vertical dropdown menu" data-dropdown-menu>
+            {% include nav.html %}
+          </ul>
+        </nav>
 
         <!-- original content goes in this container -->
         <div class="off-canvas-content" data-off-canvas-content>
           <main class="row column">
-            <img class="mobile-logo show-for-small" src="img/logo.png" alt="Damgar Group Logo">
+            <img class="mobile-logo show-for-small-only" src="img/logo.png" alt="Damgar Group Logo">
             {{ content }}
           </main>
 
