--- a/css/app.css
+++ b/css/app.css
@@ -1494,16 +1494,16 @@ kbd {
     margin-left: 0;
     margin-right: 0; }
   .button.primary {
-    background-color: #2199e8;
+    background-color: #C92C39;
     color: #fff; }
     .button.primary:hover, .button.primary:focus {
-      background-color: #147cc0;
+      background-color: #a1232e;
       color: #fff; }
   .button.secondary {
-    background-color: #777;
+    background-color: #4A4A4A;
     color: #fff; }
     .button.secondary:hover, .button.secondary:focus {
-      background-color: #5f5f5f;
+      background-color: #3b3b3b;
       color: #fff; }
   .button.success {
     background-color: #3adb76;
@@ -1524,25 +1524,25 @@ kbd {
       background-color: #da3116;
       color: #fff; }
   .button.hollow {
-    border: 1px solid #2199e8;
-    color: #2199e8; }
+    border: 1px solid #C92C39;
+    color: #C92C39; }
     .button.hollow, .button.hollow:hover, .button.hollow:focus {
       background-color: transparent; }
     .button.hollow:hover, .button.hollow:focus {
-      border-color: #0c4d78;
-      color: #0c4d78; }
+      border-color: #65161d;
+      color: #65161d; }
     .button.hollow.primary {
-      border: 1px solid #2199e8;
-      color: #2199e8; }
+      border: 1px solid #C92C39;
+      color: #C92C39; }
       .button.hollow.primary:hover, .button.hollow.primary:focus {
-        border-color: #0c4d78;
-        color: #0c4d78; }
+        border-color: #65161d;
+        color: #65161d; }
     .button.hollow.secondary {
-      border: 1px solid #777;
-      color: #777; }
+      border: 1px solid #4A4A4A;
+      color: #4A4A4A; }
       .button.hollow.secondary:hover, .button.hollow.secondary:focus {
-        border-color: #3c3c3c;
-        color: #3c3c3c; }
+        border-color: #252525;
+        color: #252525; }
     .button.hollow.success {
       border: 1px solid #3adb76;
       color: #3adb76; }
@@ -1966,7 +1966,7 @@ select {
   background: #C92C39;
   color: #fefefe; }
   .badge.secondary {
-    background: #777;
+    background: #4A4A4A;
     color: #fefefe; }
   .badge.success {
     background: #3adb76;
@@ -2059,16 +2059,16 @@ select {
       width: calc(16.66667% - 1px);
       margin-right: 1px; }
   .button-group.primary .button {
-    background-color: #2199e8;
+    background-color: #C92C39;
     color: #fefefe; }
     .button-group.primary .button:hover, .button-group.primary .button:focus {
-      background-color: #147cc0;
+      background-color: #a1232e;
       color: #fefefe; }
   .button-group.secondary .button {
-    background-color: #777;
+    background-color: #4A4A4A;
     color: #fefefe; }
     .button-group.secondary .button:hover, .button-group.secondary .button:focus {
-      background-color: #5f5f5f;
+      background-color: #3b3b3b;
       color: #fefefe; }
   .button-group.success .button {
     background-color: #3adb76;
@@ -2122,9 +2122,9 @@ select {
   .callout > :last-child {
     margin-bottom: 0; }
   .callout.primary {
-    background-color: #def0fc; }
+    background-color: #f8dee0; }
   .callout.secondary {
-    background-color: #ebebeb; }
+    background-color: #e4e4e4; }
   .callout.success {
     background-color: #e1faea; }
   .callout.warning {
@@ -2497,7 +2497,7 @@ select {
   background: #C92C39;
   color: #fefefe; }
   .label.secondary {
-    background: #777;
+    background: #4A4A4A;
     color: #fefefe; }
   .label.success {
     background: #3adb76;
@@ -2607,7 +2607,7 @@ select {
     margin-left: 1rem; }
   .menu .active > a {
     color: #fefefe;
-    background: #2199e8; }
+    background: #C92C39; }
 
 .menu-text {
   font-weight: bold;
@@ -2860,9 +2860,9 @@ body {
   margin-bottom: 1rem;
   border-radius: 0; }
   .progress.primary .progress-meter {
-    background-color: #2199e8; }
+    background-color: #C92C39; }
   .progress.secondary .progress-meter {
-    background-color: #777; }
+    background-color: #4A4A4A; }
   .progress.success .progress-meter {
     background-color: #3adb76; }
   .progress.warning .progress-meter {
@@ -3257,11 +3257,11 @@ table.hover tr:nth-of-type(even):hover {
     background: transparent; }
 
 .tabs.primary {
-  background: #2199e8; }
+  background: #C92C39; }
   .tabs.primary > li > a {
     color: #fefefe; }
     .tabs.primary > li > a:hover, .tabs.primary > li > a:focus {
-      background: #1893e4; }
+      background: #bf2a36; }
 
 .tabs-title {
   float: left; }
@@ -4068,6 +4068,22 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-block;
     width: 66px;
     margin: 0 auto; }
+  .title-bar .menu-icon {
+    position: absolute;
+    right: 14px;
+    top: 32px; }
+
+.dropdown.menu {
+  background-color: #C92C39;
+  font-size: 28px;
+  font-weight: 700; }
+  .dropdown.menu,
+  .dropdown.menu a {
+    color: #fefefe; }
+
+.off-canvas,
+.dropdown.menu {
+  height: 100%; }
 
 .top-bar-center {
   width: 100%;
@@ -4105,4 +4121,4 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
   background-position: center;
   background-size: cover;
-  background-color: #2199e8; }
+  background-color: #C92C39; }
