fine tuning off canvas menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
   </head>
   <body>
 
-    <div class="off-canvas-wrapper">
+    <div id="off-canvas-menu" class="off-canvas-wrapper" data-force-top="false">
       <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 
         <!-- "wider" top-bar menu for 'medium' and up -->
