minor style tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
           <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
             <div class="title-bar-center">
               <span class="title-bar-title"><img src="img/logo_d.png" alt="Damgar Group Symbol"></a></span>
-              <button class="menu-icon float-right" type="button" data-open="offCanvasRight">menu</button>
+              <button class="menu-icon float-right" type="button" data-open="offCanvasRight"><i class="fa fa-bars"></i></button>
             </div>
           </div>
         </div>
