tidy up LATEST DEVELOPMENT label

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,7 @@
         <!-- off-canvas right menu -->
         <nav class="off-canvas position-right" id="offCanvasRight" data-off-canvas data-position="right" role="navigation">
           <ul class="vertical dropdown menu" data-dropdown-menu>
+            <li>&nbsp;</li>
             {% include nav.html %}
           </ul>
         </nav>
