--- a/css/app.css
+++ b/css/app.css
@@ -387,10 +387,10 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  color: #0a0a0a;
+  color: #4A4A4A;
   background: #fefefe;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
@@ -1220,7 +1220,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
   color: inherit;
@@ -1332,7 +1332,7 @@ cite {
     content: '\2014 \0020'; }
 
 abbr {
-  color: #0a0a0a;
+  color: #4A4A4A;
   cursor: help;
   border-bottom: 1px dotted #0a0a0a; }
 
@@ -1359,8 +1359,8 @@ kbd {
   color: #4A4A4A; }
 
 .lead {
-  font-size: 125%;
-  line-height: 1.6; }
+  font-size: 150%;
+  line-height: 1.8; }
 
 .stat {
   font-size: 2.5rem;
@@ -2115,7 +2115,7 @@ select {
   border: 1px solid rgba(10, 10, 10, 0.25);
   border-radius: 0;
   position: relative;
-  color: #0a0a0a;
+  color: #4A4A4A;
   background-color: white; }
   .callout > :first-child {
     margin-top: 0; }
@@ -3186,7 +3186,7 @@ table {
   table thead,
   table tfoot {
     background: #f8f8f8;
-    color: #0a0a0a; }
+    color: #4A4A4A; }
     table thead tr,
     table tfoot tr {
       background: transparent; }
@@ -4037,10 +4037,30 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400; }
 
 h1 {
-  font-weight: 600; }
+  font-weight: 600;
+  text-align: center; }
+
+p {
+  font-size: 105%; }
+
+.lead {
+  font-weight: 200;
+  margin-bottom: 32px; }
+  @media screen and (min-width: 40em) {
+    .lead {
+      font-size: 160%; } }
 
 .quiet {
   font-size: 80%; }
+
+.logo-spacer {
+  display: block;
+  clear: both;
+  background-image: url("/img/logo_d.png");
+  background-size: cover;
+  width: 30px;
+  height: 30px;
+  margin: 32px auto; }
 
 .mobile-logo {
   width: 120px;
