--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
           </main>
 
           <footer class="site-footer row column mtl" role="contentinfo">
-          <hr/>
+            <button class="cta">LATEST DEVELOPMENT SELLING NOW</button>
             <ul class="menu quiet copyright align-right">
               <li><a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i>@{{ site.twitter }}</a></li>
               <li><a href="https://github.com/{{ site.github }}/"><i class="fa fa-github"></i>@{{ site.github }}</a></li>
