--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -17,14 +17,28 @@
 
 // Typography
 
+@font-face {
+	font-family: 'Avenir Next';
+	src: url('fonts/AvenirNext-Bold.eot');
+	src: url('fonts/AvenirNext-Bold.eot?#iefix') format('embedded-opentype'),
+		url('fonts/AvenirNext-Bold.woff') format('woff'),
+		url('fonts/AvenirNext-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-weight: $global-weight-normal;
-	@media #{$medium-up} {
-	}
 }
 h1 {
-	font-weight: $global-weight-semibold;
+	font-family: 'Avenir Next';
+	font-weight: bold;
 	text-align: center;
+	margin-bottom: 32px;
+
+	@media #{$small-only} {
+		font-size: rem-calc(36);
+	}
 }
 
 p {
