projects listing styling

--- a/css/app.css
+++ b/css/app.css
@@ -4052,9 +4052,6 @@ h1 {
     h1 {
       font-size: 2.25rem; } }
 
-p {
-  font-size: 105%; }
-
 .lead {
   font-weight: 200;
   margin-bottom: 32px; }
@@ -4153,6 +4150,15 @@ p {
   background-position: center;
   background-size: cover;
   background-color: #C92C39; }
+  @media screen and (min-width: 40em) {
+    .latest-project .project-thumb {
+      width: 100%;
+      margin: 0;
+      left: initial;
+      right: initial; } }
+  .latest-project .project-thumb.thumbnail {
+    border: none;
+    box-shadow: none; }
 
 .latest-project .project-name {
   font-weight: 700;
@@ -4171,6 +4177,67 @@ p {
   margin: 7px 0 2px 0;
   font-size: 1rem;
   letter-spacing: 3px; }
+
+.project-listing .project-thumb {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  height: 270px;
+  overflow: hidden;
+  background-position: center;
+  background-size: cover;
+  background-color: #C92C39; }
+  @media screen and (min-width: 40em) {
+    .project-listing .project-thumb {
+      width: 100%;
+      margin: 0;
+      left: initial;
+      right: initial; } }
+  .project-listing .project-thumb.thumbnail {
+    border: none;
+    box-shadow: none; }
+
+.project-listing .project-name {
+  font-weight: 700;
+  margin-bottom: 0;
+  font-size: 2rem; }
+  @media screen and (min-width: 40em) {
+    .project-listing .project-name {
+      display: inline-block; } }
+
+.project-listing .project-location {
+  display: inline-block;
+  margin-top: -12px;
+  font-size: 1.75rem;
+  font-weight: 200; }
+  @media screen and (min-width: 40em) {
+    .project-listing .project-location {
+      text-align: right;
+      float: right;
+      margin-top: 0; } }
+
+.project-listing .project-label {
+  display: inline-block;
+  text-transform: uppercase;
+  color: #9B9B9B;
+  margin: 7px 0 2px 0;
+  font-size: 1rem;
+  letter-spacing: 3px; }
+
+.project-listing a {
+  color: #4A4A4A; }
+
+.project-listing:hover .project-thumb {
+  opacity: .75;
+  -webkit-filter: blur(1px);
+          filter: blur(1px); }
+
+.project-listing:hover .project-name,
+.project-listing:hover .project-location {
+  color: #C92C39; }
 
 .cta {
   margin: 32px auto;
