--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <!-- Fount Awesome -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="/css/app.css">
 
     <!-- favicon
     ================================================== -->
@@ -45,7 +45,7 @@
             <ul class="menu">
               {% include nav.html %}
             </ul>
-            <p><a class="logo" href="{{ site.url }}"><img src="img/logo.png" alt="Damgar Group Logo"></a></p>
+            <p><a class="logo" href="{{ site.url }}"><img src="/img/logo.png" alt="Damgar Group Logo"></a></p>
           </div>
         </div>
 
@@ -70,7 +70,7 @@
         <!-- original content goes in this container -->
         <div class="off-canvas-content" data-off-canvas-content>
           <main class="row column">
-            <img class="mobile-logo show-for-small-only" src="img/logo.png" alt="Damgar Group Logo">
+            <img class="mobile-logo show-for-small-only" src="/img/logo.png" alt="Damgar Group Logo">
             {{ content }}
           </main>
 
@@ -82,8 +82,7 @@
               <li><a href="tel:{{ site.phone }}">{{ site.phone }}</a></li>
               <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             </ul>
-            <p class="text-center"><small><i class="fa fa-copyright"></i> {{ site.year }} {{ site.brand }}</small></p>
-            <p class="text-center"><small><i class="fa fa-code"></i> Built by <a href="http://nathanbirrell.me" target="_blank">Nathan Birrell</a></small></p>
+            <p class="text-center"><small><i class="fa fa-copyright"></i> {{ site.year }} {{ site.brand }} &nbsp;&nbsp; | &nbsp;&nbsp; <i class="fa fa-code"></i> Built by <a href="http://nathanbirrell.me" target="_blank">Nathan Birrell</a></small></p>
           </footer>
         </div><!-- end .off-canvas-content -->
 
@@ -93,11 +92,11 @@
     <!-- Loading JavaScripts
     ================================================== -->
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.js"><\/script>')</script>
-    <script src="bower_components/what-input/what-input.js"></script>
-    <script src="bower_components/foundation-sites/dist/foundation.js"></script>
-    <script src="js/app.js"></script>
+    <script src="///ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/bower_components/jquery/dist/jquery.js"><\/script>')</script>
+    <script src="/bower_components/what-input/what-input.js"></script>
+    <script src="/bower_components/foundation-sites/dist/foundation.js"></script>
+    <script src="/js/app.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
