URL handling for site portability

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
         <div class="sticky">
           <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
             <div class="title-bar-center">
-              <span class="title-bar-title"><img src="img/logo_d.png" alt="Damgar Group Symbol"></a></span>
+              <span class="title-bar-title"><img src="{{site.url}}/img/logo_d.png" alt="Damgar Group Symbol"></a></span>
               <button class="menu-icon float-right" type="button" data-open="offCanvasRight"><i class="fa fa-bars"></i></button>
             </div>
           </div>
@@ -70,7 +70,7 @@
         <!-- original content goes in this container -->
         <div class="off-canvas-content" data-off-canvas-content>
           <main class="row column">
-            <img class="mobile-logo show-for-small-only" src="/img/logo.png" alt="Damgar Group Logo">
+            <img class="mobile-logo show-for-small-only" src="{{site.url}}/img/logo.png" alt="Damgar Group Logo">
             {{ content }}
           </main>
 
