--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
         <div class="sticky">
           <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
             <div class="title-bar-center">
-              <span class="title-bar-title"><img src="{{site.url}}/img/logo_d.png" alt="Damgar Group Symbol"></a></span>
+              <span class="title-bar-title"><img src="{{site.url}}/img/logo_d.png" alt="Damgar Group Symbol"></span>
               <button class="menu-icon float-right" type="button" data-open="offCanvasRight"><i class="fa fa-bars"></i></button>
             </div>
           </div>
@@ -62,7 +62,8 @@
         <!-- off-canvas right menu -->
         <nav class="off-canvas position-right" id="offCanvasRight" data-off-canvas data-position="right" role="navigation">
           <ul class="vertical dropdown menu" data-dropdown-menu>
-            <li>&nbsp;</li>
+            <img class="menu-logo" src="{{site.url}}/img/logo_d_white.png" alt="Damgar Group Symbol">
+            <button class="close-icon float-right" type="button" data-close="offCanvasRight"><i class="fa fa-times"></i></button>
             {% include nav.html %}
           </ul>
         </nav>
