--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,10 +50,12 @@
         </div>
 
         <!-- off-canvas title bar for 'small' screen -->
-        <div class="sticky">
+        <div class="sticky expanded">
           <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
             <div class="title-bar-center">
-              <span class="title-bar-title"><img src="{{site.url}}/img/logo_d.png" alt="Damgar Group Symbol"></span>
+              <img id="sticky-logo-swap" class="hide" src="{{site.url}}/img/logo_d.png" alt="Damgar Group Symbol">
+              <img id="expanded-logo-swap" class="hide" src="{{site.url}}/img/logo.png" alt="Damgar Group Symbol">
+              <img class="mobile-logo mobile-logo-expanded" src="{{site.url}}/img/logo.png" alt="Damgar Group Logo">
               <button class="menu-icon float-right" type="button" data-open="offCanvasRight"><i class="fa fa-bars"></i></button>
             </div>
           </div>
@@ -71,7 +73,6 @@
         <!-- original content goes in this container -->
         <div class="off-canvas-content" data-off-canvas-content>
           <main class="row column">
-            <img class="mobile-logo show-for-small-only" src="{{site.url}}/img/logo.png" alt="Damgar Group Logo">
             {{ content }}
           </main>
 
