--- a/css/app.css
+++ b/css/app.css
@@ -4071,12 +4071,6 @@ h1 {
   height: 30px;
   margin: 32px auto; }
 
-.mobile-logo {
-  width: 120px;
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 40px; }
-
 .sticky {
   position: fixed;
   width: 100%;
@@ -4087,10 +4081,16 @@ h1 {
   padding: 0; }
   .is-open-right .title-bar {
     display: none; }
-  .title-bar .title-bar-center img {
+  .title-bar .mobile-logo {
     display: inline-block;
     width: 58px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    transition: all 0.4s ease; }
+    .expanded .title-bar .mobile-logo {
+      display: block;
+      width: 120px;
+      margin: 28px auto 6px auto;
+      margin-bottom: 40px; }
   .title-bar .menu-icon {
     font-size: 24px;
     position: absolute;
