--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -86,12 +86,6 @@ h1 {
 // HEADER
 
 // mobile header
-.mobile-logo {
-	width: 120px;
-	display: block;
-	margin: 0 auto;
-	margin-bottom: 40px;
-}
 .sticky {
 	position: fixed;
 	width: 100%;
@@ -105,10 +99,18 @@ h1 {
 		display: none;
 	}
 
-	.title-bar-center img {
+	.mobile-logo {
 		display: inline-block;
 		width: 58px;
 		margin: 0 auto;
+		transition: all 0.4s ease;
+
+		.expanded & {
+			display: block;
+			width: 120px;
+			margin: 28px auto 6px auto;
+			margin-bottom: 40px;
+		}
 	}
 
 	.menu-icon {
