fixing up footer for mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,13 +78,14 @@
 
           <a class="large button cta" href="#">LATEST DEVELOPMENT SELLING NOW</a>
 
-          <footer class="site-footer row column" role="contentinfo">
+          <footer class="site-footer row" role="contentinfo">
             <i class="logo-spacer large"></i>
-            <ul class="menu text-center">
+            <ul class="text-center">
               <li><a href="tel:{{ site.phone }}">{{ site.phone }}</a></li>
               <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             </ul>
-            <p class="text-center"><small><i class="fa fa-copyright"></i> {{ site.year }} {{ site.brand }} &nbsp;&nbsp; | &nbsp;&nbsp; <i class="fa fa-code"></i> Built by <a href="http://nathanbirrell.me" target="_blank">Nathan Birrell</a></small></p>
+            <p class="text-center"><small><i class="fa fa-copyright"></i> {{ site.year }} {{ site.brand }} <br>
+              <i class="fa fa-code"></i> Built by <a href="http://nathanbirrell.me" target="_blank">Nathan Birrell</a></small></p>
           </footer>
         </div><!-- end .off-canvas-content -->
 
