--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,4 @@
-<li><a href="{{ site.url }}">Home</a></li>
-<li><a href="https://github.com/daigofuji/jekyll-foundation-6-starter">Source</a></li>
-<li><a href="{{site.url}}/page-html-unit-test.html">Unit Test</a></li>
-<li><a href="{{site.url}}/page-foundation-example.html">Foundation</a></li>
-<li><a href="{{site.url}}/page-template-example.html">Template</a></li>
+<li><a href="{{ site.url }}">About</a></li>
+<li><a href="{{site.url}}/projects">Projects</a></li>
+<li><a href="{{site.url}}/testimonials">Testimonials</a></li>
+<li><a href="{{site.url}}/contact">Contact</a></li>
